[STOE1-164] - changes to fix the wish list items overlapping the main content area

--- a/app/design/frontend/HumanElement/stover_default/Magento_Catalog/web/css/source/_module_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/Magento_Catalog/web/css/source/_module_extend.less
@@ -182,6 +182,17 @@
             margin-bottom: 0;
         }
     }
+
+    .sidebar {
+        .action {
+            &.tocart {
+                letter-spacing: .15em;
+                text-transform: uppercase;
+                border: 2px solid transparent;
+            }
+        }
+    }
+
 }
 
 //
@@ -317,3 +328,15 @@
     }
 }
 
+// 1440 and up
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__xl) {
+
+    .sidebar {
+        .product-items {
+            .product-item-details {
+                margin-left: 50px;
+            }
+        }
+    }
+
+}
